--- a/covidVignette.Rmd
+++ b/covidVignette.Rmd
@@ -36,7 +36,7 @@ library(lubridate)
 
 # Functions to contact the COVID19 API
 
-To access the [Covid Data](https://documenter.getpostman.com/view/10808728/SzS8rjbc), I wrote several functions to contact the COVID19 API via 6 different endpoints.
+To access the [Covid Data](https://documenter.getpostman.com/view/10808728/SzS8rjbc), I wrote several functions to contact the COVID19 API via different endpoints.
 
 ## Base URL
 
